force-app/main/default/objects/Protocolo__c/Protocolo__c.object-meta.xml
<CustomObject>
    <label>Protocolo</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Nº do Protocolo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Protocolos</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>