force-app/main/default/objects/Protocolo__c/fields/Ativo__c.field-meta.xml
<CustomField>
    <fullName>Ativo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ativo</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Protocolos</relationshipLabel>
    <relationshipName>Protocolos</relationshipName>
    <type>Lookup</type>
</CustomField>