force-app/main/default/objects/Protocolo__c/fields/Contrato__c.field-meta.xml
<CustomField>
    <fullName>Contrato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato</label>
    <referenceTo>Contrato_de_Servi_o__c</referenceTo>
    <relationshipLabel>Protocolos</relationshipLabel>
    <relationshipName>Protocolos</relationshipName>
    <type>Lookup</type>
</CustomField>