force-app/main/default/objects/Protocolo__c/fields/Em_transferencia_por__c.field-meta.xml
<CustomField>
    <fullName>Em_transferencia_por__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Em transferência por</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>equals</operation>
            <value>HOSPCOM</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Protocolos (Em transferência por)</relationshipLabel>
    <relationshipName>Protocolos1</relationshipName>
    <type>Lookup</type>
</CustomField>