force-app/main/default/objects/Protocolo__c/fields/Prazo_de_recebimento__c.field-meta.xml
<CustomField>
    <fullName>Prazo_de_recebimento__c</fullName>
    <label>Prazo de recebimento</label>
    <type>Date</type>
</CustomField>