force-app/main/default/objects/Protocolo__c/fields/Situacao__c.field-meta.xml
<CustomField>
    <fullName>Situacao__c</fullName>
    <formula>IF( TEXT(Status__c) = &apos;Finalizado&apos;, &apos;Concluído&apos;, IF(TEXT(Status__c) = &apos;Cancelado&apos;, &apos;Cancelado&apos;,
IF(
(Prazo_de_recebimento__c  - TODAY())&gt; 1,
TEXT((Prazo_de_recebimento__c- TODAY()) ) &amp; &quot; dias para concluir&quot;,
IF(
(Prazo_de_recebimento__c - TODAY())= 1,
&quot;Vence Amanhã&quot;,
IF(
(Prazo_de_recebimento__c - TODAY())= 0,
&quot;Vence Hoje&quot;,
IF(
(Prazo_de_recebimento__c - TODAY())= -1,
TEXT((Prazo_de_recebimento__c- TODAY())*(-1)) &amp; &quot; dia atrasado&quot;,
TEXT((Prazo_de_recebimento__c - TODAY())*(-1)) &amp; &quot; dias atrasado&quot;
)
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Situação</label>
    <type>Text</type>
</CustomField>