force-app/main/default/objects/Protocolo__c/fields/Total_de_objetos__c.field-meta.xml
<CustomField>
    <fullName>Total_de_objetos__c</fullName>
    <label>Total de objetos</label>
    <summaryForeignKey>Objeto_do_protocolo__c.Protocolo__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>