force-app/main/default/objects/Protocolo__c/validationRules/Adm.validationRule-meta.xml
<ValidationRule>
    <fullName>Adm</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
!$User.Ignorar_erros__c,
TEXT(Status__c) = &apos;Cancelado&apos;
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Somente administradores podem cancelar um protocolo.</errorMessage>
</ValidationRule>