force-app/main/default/objects/Protocolo__c/validationRules/Finalizacao.validationRule-meta.xml
<ValidationRule>
    <fullName>Finalizacao</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(Status__c),
Total_de_objetos__c !=  Total_de_objetos_recebidos__c,
TEXT(Status__c) = &apos;Finalizado&apos;
)</errorConditionFormula>
    <errorMessage>Para finalizar, marque todos os objetos como recebido.</errorMessage>
</ValidationRule>