force-app/main/default/objects/Protocolo__c/validationRules/Recebedor_finaliza.validationRule-meta.xml
<ValidationRule>
    <fullName>Recebedor_finaliza</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.ProfileId != &apos;00ei0000000nKA9&apos;,
$User.ContactId != Recebido_por__r.Id,
ISCHANGED(Status__c),
TEXT(Status__c) = &apos;Finalizado&apos;
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Apenas o recebedor pode finalizar um protocolo.</errorMessage>
</ValidationRule>