force-app/main/default/objects/Protocolo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Enviado_por__c</columns>
    <columns>Em_transferencia_por__c</columns>
    <columns>Recebido_por__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Prazo_de_recebimento__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>