force-app/main/default/objects/Protocolo__c/listViews/Atrasados.listView-meta.xml
<ListView>
    <fullName>Atrasados</fullName>
    <columns>NAME</columns>
    <columns>Enviado_por__c</columns>
    <columns>Em_transferencia_por__c</columns>
    <columns>Recebido_por__c</columns>
    <columns>Prazo_de_recebimento__c</columns>
    <columns>Situacao__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Situacao__c</field>
        <operation>contains</operation>
        <value>atrasado</value>
    </filters>
    <label>Atrasados</label>
</ListView>