force-app/main/default/objects/Protocolo__c/listViews/Finalizados.listView-meta.xml
<ListView>
    <fullName>Finalizados</fullName>
    <columns>NAME</columns>
    <columns>Enviado_por__c</columns>
    <columns>Em_transferencia_por__c</columns>
    <columns>Recebido_por__c</columns>
    <columns>Prazo_de_recebimento__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Finalizado</value>
    </filters>
    <label>Finalizados</label>
</ListView>